--- a/index.html
+++ b/index.html
@@ -1,107 +1,31 @@
+
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
-  <title>FinternetOps • MBCC Agent Ops Playbook</title>
-  <link rel="stylesheet" href="assets/styles.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>FinternetOps • Agent Ops</title>
+<link rel="stylesheet" href="assets/styles.css">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="nav">
-    <div class="nav-inner">
-      <a class="brand" href="index.html"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
-      <nav class="links" aria-label="Primary">
-        <a href="index.html#overview">Overview</a>
-        <a href="index.html#runbooks">Runbooks</a>
-        <a href="training/index.html">Training</a>
-        <a href="blog/index.html">Blog</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    
-<section class="hero" id="overview">
-  <div class="card hero-card">
-    <div class="kicker">FinternetOps • governance-first • AdSense-ready</div>
-    <h1 class="h1">Agent Ops Control Plane patterns—observe, constrain, and intervene while agents act.</h1>
-    <p class="sub">
-      A public-facing playbook built for clarity + SEO. Keep proprietary IP private, while still publishing
-      useful operating principles for your audience.
-    </p>
-    <div class="actions">
-      <a class="btn primary" href="#runbooks" data-scroll>See Runbooks</a>
-      <a class="btn" href="training/index.html">Start Training</a>
-      <a class="btn" href="blog/index.html">Read Blog</a>
-    </div>
-    <div class="pills">
-      <span class="pill">Zero Trust defaults</span>
-      <span class="pill">RBAC-ready</span>
-      <span class="pill">Audit logs</span>
-      <span class="pill">Human-in-loop</span>
-    </div>
+<header class="nav">
+  <div class="nav-inner">
+    <a class="brand" href="index.html"><span class="logo"></span><b>FinternetOps • Agent Ops</b></a>
+    <nav class="links">
+      <a href="blog/post-1.html">Blog</a>
+    </nav>
   </div>
-
-  <aside class="card side" aria-label="Quick start">
-    <h3>Quick start</h3>
-    <p>Pick one agent role, run one checklist, then iterate weekly.</p>
-    <hr class="sep"/>
-    <div class="badge">1) Goal</div><div style="height:8px"></div>
-    <div class="badge">2) Tools</div><div style="height:8px"></div>
-    <div class="badge">3) Guardrails</div><div style="height:8px"></div>
-    <div class="badge">4) Evals</div><div style="height:8px"></div>
-    <div class="badge">5) Improve</div>
-  </aside>
-</section>
-
-<section class="section" id="runbooks">
-  <h2>Runbooks</h2>
-  <p>Public runbooks that stay useful without exposing proprietary IP.</p>
-  <div class="grid">
-    <div class="card tile">
-      <h4><a href="runbooks/onboarding.html">Onboarding Runbook</a></h4>
-      <p>Start using Agent Ops in ~30 minutes.</p>
-    </div>
-    <div class="card tile">
-      <h4><a href="runbooks/quality.html">Quality & Eval Runbook</a></h4>
-      <p>Test cases, regressions, monitoring.</p>
-    </div>
-    <div class="card tile">
-      <h4><a href="runbooks/security.html">Security Runbook</a></h4>
-      <p>Zero trust, secrets hygiene, RBAC, incident response.</p>
-    </div>
+</header>
+<main class="container">
+  <div class="card">
+    <h1 class="h1">Agent Ops Control Plane</h1>
+    <p class="sub">Governance-first operations for AI agents.</p>
   </div>
-</section>
-
-<section class="section">
-  <h2>Training</h2>
-  <p>Learning modules designed to create content depth (good for Auto Ads + SEO).</p>
-  <div class="card callout">
-    <h3><a href="training/index.html">Open Training</a></h3>
-    <p class="small">Fundamentals → Guardrails → Quality loop.</p>
-  </div>
-</section>
-
-<section class="section">
-  <h2>Blog</h2>
-  <p>Short build notes you can expand over time.</p>
-  <div class="card callout">
-    <h3><a href="blog/index.html">Open Blog</a></h3>
-    <p class="small">Weekly posts = more pages = more inventory.</p>
-  </div>
-</section>
-
-    <footer class="footer">
-      <div class="small">
-        © 2026 MoeCommunityCloud / MBCC. All rights reserved.
-        <br/>AdSense Auto Ads enabled site-wide. ads.txt included at hosting root.
-      </div>
-    </footer>
-  </main>
-
-  <script src="assets/app.js"></script>
+</main>
+<footer class="footer container">
+  © 2026 MoeCommunityCloud
+</footer>
 </body>
 </html>
