--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
-
 <!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>FinternetOps • Agent Ops</title>
-<link rel="stylesheet" href="assets/styles.css">
+<html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents."/>
+<title>FinternetOps • MBCC Agent Ops Playbook</title>
+<link rel="stylesheet" href="assets/styles.css"/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
-</head>
-<body>
-<header class="nav">
-  <div class="nav-inner">
-    <a class="brand" href="index.html"><span class="logo"></span><b>FinternetOps • Agent Ops</b></a>
-    <nav class="links">
-      <a href="blog/post-1.html">Blog</a>
-    </nav>
-  </div>
-</header>
+</head><body>
+<header class="nav"><div class="nav-inner">
+<a class="brand" href="index.html"><span class="logo"></span>
+<div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
+<nav class="links">
+<a href="index.html#overview">Overview</a>
+<a href="index.html#runbooks">Runbooks</a>
+<a href="training/index.html">Training</a>
+<a href="blog/index.html">Blog</a>
+</nav></div></header>
 <main class="container">
-  <div class="card">
-    <h1 class="h1">Agent Ops Control Plane</h1>
-    <p class="sub">Governance-first operations for AI agents.</p>
+<div class="card" id="overview">
+  <div class="kicker">FinternetOps • governance-first • AdSense-ready</div>
+  <h1 class="h1">Agent Ops Control Plane patterns—observe, constrain, and intervene while agents act.</h1>
+  <p class="sub">Public playbook built for clarity + SEO. Keep proprietary IP private, while publishing real operating principles.</p>
+  <div class="actions">
+    <a class="btn primary" href="#runbooks">See Runbooks</a>
+    <a class="btn" href="training/index.html">Start Training</a>
+    <a class="btn" href="blog/index.html">Read Blog</a>
   </div>
+  <div class="meta"><span class="tag">Zero Trust</span><span class="tag">RBAC</span><span class="tag">Audit Logs</span><span class="tag">Human-in-loop</span></div>
+</div>
+
+<h2 id="runbooks">Runbooks</h2>
+<p style="color:var(--muted)">Public runbooks that stay useful without exposing proprietary wiring.</p>
+<div class="grid">
+  <div class="card tile"><h4><a href="runbooks/onboarding.html">Onboarding Runbook</a></h4><p>Start Agent Ops in ~30 minutes.</p></div>
+  <div class="card tile"><h4><a href="runbooks/quality.html">Quality & Eval Runbook</a></h4><p>Regressions, monitoring, improvements.</p></div>
+  <div class="card tile"><h4><a href="runbooks/security.html">Security Runbook</a></h4><p>Zero trust, secrets hygiene, RBAC.</p></div>
+</div>
+
+<h2 style="margin-top:22px">Blog</h2>
+<p style="color:var(--muted)">Starter content cluster (3 expanded posts).</p>
+<div class="grid">
+  <div class="card tile"><h4><a href="blog/post-1.html">Post 1 — What Agent Ops means at FinternetOps</a></h4><p>Control plane mindset for real-world agents.</p></div>
+  <div class="card tile"><h4><a href="blog/post-2.html">Post 2 — Constraints beat prompt magic</a></h4><p>Guardrails that outperform clever prompts.</p></div>
+  <div class="card tile"><h4><a href="blog/post-3.html">Post 3 — The weekly eval loop</a></h4><p>Ship improvements without breaking things.</p></div>
+</div>
+
+<footer class="footer"><div class="small">© 2026 MoeCommunityCloud / MBCC. AdSense Auto Ads enabled site-wide.</div></footer>
 </main>
-<footer class="footer container">
-  © 2026 MoeCommunityCloud
-</footer>
-</body>
-</html>
+<script src="assets/app.js"></script>
+</body></html>
