--- a/runbooks/security.html
+++ b/runbooks/security.html
@@ -1,53 +1,31 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="FinternetOps • MBCC Agent Ops Playbook — governance-first patterns for building practical AI agents." />
-  <title>FinternetOps • Security Runbook</title>
-  <link rel="stylesheet" href="../assets/styles.css" />
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
+<html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta name="description" content="Security Runbook — practical Agent Ops checklist."/>
+<title>FinternetOps • Security Runbook</title>
+<link rel="stylesheet" href="../assets/styles.css"/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8387411349417007"
      crossorigin="anonymous"></script>
-</head>
-<body>
-  <header class="nav">
-    <div class="nav-inner">
-      <a class="brand" href="../index.html"><span class="logo" aria-hidden="true"></span><div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
-      <nav class="links" aria-label="Primary">
-        <a href="../index.html#overview">Overview</a>
-        <a href="../index.html#runbooks">Runbooks</a>
-        <a href="../training/index.html">Training</a>
-        <a href="../blog/index.html">Blog</a>
-      </nav>
-    </div>
-  </header>
-
-  <main class="container">
-    
-<section class="section">
-  <div class="card hero-card">
-    <div class="kicker">Runbook</div>
-    <h1 class="h1">Security Runbook</h1>
-    <p class="sub">A practical checklist you can follow immediately.</p>
-  </div>
-</section>
-<section class="section">
-  <div class="card callout">
-    <h2>Checklist</h2>
-    <ul>
-      <li>Enforce authentication (JWT/OAuth2) on all endpoints.</li><li>Use RBAC for tool access and admin actions.</li><li>Keep secrets in a secret manager (never in code).</li><li>Enable audit logs for prompts, tool calls, and deployments.</li>
-    </ul>
-  </div>
-</section>
-
-    <footer class="footer">
-      <div class="small">
-        © 2026 MoeCommunityCloud / MBCC. All rights reserved.
-        <br/>AdSense Auto Ads enabled site-wide. ads.txt included at hosting root.
-      </div>
-    </footer>
-  </main>
-
-  <script src="../assets/app.js"></script>
-</body>
-</html>
+</head><body>
+<header class="nav"><div class="nav-inner">
+<a class="brand" href="../index.html"><span class="logo"></span>
+<div><b>FinternetOps • Agent Ops</b><div class="small">MBCC Playbook</div></div></a>
+<nav class="links">
+<a href="../index.html#overview">Overview</a>
+<a href="../index.html#runbooks">Runbooks</a>
+<a href="../training/index.html">Training</a>
+<a href="../blog/index.html">Blog</a>
+</nav></div></header>
+<main class="container"><div class="card">
+  <div class="kicker">Runbook</div>
+  <h1 class="h1">Security Runbook</h1>
+  <p class="sub">A practical checklist you can follow immediately.</p>
+</div>
+<div class="card">
+  <h2>Checklist</h2>
+  <ul><li>Enforce authentication (JWT/OAuth2) on all endpoints.</li><li>Use RBAC for tool access and admin actions.</li><li>Keep secrets in a secret manager (never in code).</li><li>Enable audit logs for prompts, tool calls, and deployments.</li></ul>
+</div>
+<footer class="footer"><div class="small">© 2026 MoeCommunityCloud / MBCC. AdSense Auto Ads enabled site-wide.</div></footer>
+</main>
+<script src="../assets/app.js"></script>
+</body></html>
