--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
   </div>
   <div class="meta"><span class="tag">Zero Trust</span><span class="tag">RBAC</span><span class="tag">Audit Logs</span><span class="tag">Human-in-loop</span></div>
 </div>
+<div class="card" id="visuals">
+  <div class="kicker">Visual Learning</div>
+  <h2>See the System</h2>
+  <p class="lead">Two quick visuals that connect <b>MoeCommunityCloud</b> to <b>Agent Ops</b>, <b>FinternetOps</b>, and the <b>Six-Layer Control Stack</b> used throughout training.</p>
+
+  <div class="media-grid">
+    <figure class="media-card">
+      <img src="assets/images/moecommunitycloud-ecosystem.png" alt="MoeCommunityCloud ecosystem connecting Agent Ops and FinternetOps"/>
+      <figcaption>
+        <h4>MoeCommunityCloud Ecosystem</h4>
+        <p>One platform, two mission lanes: <b>Agent Ops</b> runs AI agent orchestration + monitoring, while <b>FinternetOps</b> enforces governance for secure financial pipelines.</p>
+        <div class="actions">
+          <a class="btn" href="https://agentops.moecommunitycloud.com/" target="_blank" rel="noopener">Open Agent Ops</a>
+          <a class="btn" href="https://finternetops.moecommunitycloud.com/" target="_blank" rel="noopener">Open FinternetOps</a>
+        </div>
+      </figcaption>
+    </figure>
+
+    <figure class="media-card">
+      <img src="assets/images/six-layer-stack.png" alt="Six Layer Control Stack: Purpose, Oversight, Memory, Decisions, Behavior, Execution"/>
+      <figcaption>
+        <h4>Six-Layer Control Stack</h4>
+        <p>Agent Ops is run like a control system: <b>Purpose</b> drives <b>Oversight</b>, which governs <b>Memory</b>, shapes <b>Decisions</b>, constrains <b>Behavior</b>, and finally authorizes <b>Execution</b>.</p>
+        <div class="actions">
+          <a class="btn primary" href="training/index.html">Explore Training</a>
+          <a class="btn" href="training/module-1.html">Start Layer 1</a>
+        </div>
+      </figcaption>
+    </figure>
+  </div>
+</div>
+
 
 <h2 id="runbooks">Runbooks</h2>
 <p style="color:var(--muted)">Public runbooks that stay useful without exposing proprietary wiring.</p>
